# llm-app-wiki

./: README.adoc  README.md  pyproject.toml  wiki_app_v0.0.ipynb  wiki_app_v0.1.ipynb
data/test_wiki_db/: chroma.sqlite3
